# psiphon-ios-vpn

./: .gitattributes  .gitignore  BUILD.md  Pipfile  Podfile  README.md  SharedAuthorization+CoreDataClass.m  SharedAuthorization+CoreDataProperties.h  Snapfile  build.sh  exportAppStoreOptions.plist  exportDevelopmentOptions.plist  generate_and_upload_store_assets.sh  genstrings.py  genstrings.sh  git_release.py  i18n_conf.json  inc_info_plist.py  inc_vers.py  increment_plist.py  increment_versions.sh  info_plist.py  install_cpp.sh  psi_export_doc.py  psiphon_website_info.py  requirements.txt  store_assets_itmsp.py  transifex_pull.py
HyprMX.xcframework/: Info.plist
PsiApi/: Error.swift  Foundation+Additions.swift  NonEmptySeq+CustomStringFeedbackDescription.swift  NonEmptySeq.swift  NonEmptySeqTest.swift  Package.resolved  Package.swift  PsiApi.h  README.md  TunnelProviderManager.swift
PsiCashLib.framework/: CMakeLists.txt  CMakeLists.txt.in  Info.plist  LICENSE-3RD-PARTY  PsiCashLib  README.md  build-git-commit.txt  build-windows.bat  gcov.sh
PsiCashLib.framework/Headers/: PsiCash.h  PsiCashAPIModels.h  PsiCashLib.h  PsiCashLibWrapper.h  Purchase.h  PurchasePrice.h
PsiCashLib.framework/Modules/: module.modulemap
Psiphon/: ActorBuilder.swift  ActorSystemInterface.swift  AdManager.h  AdManager.m  AppAction+ValuePaths.swift  AppDelegate.h  AppDelegate.m  AppEvent.h  AppEvent.m  AppInfo.h  AppInfo.m  AppObservables.h  AppObservables.m  AppReceipt.swift  AppReceiptReducer.swift  AppRoot.swift  AppRootActor.swift  AppState+Feedback.swift  AppState+ValuePaths.swift  AppState.swift  AppStoreIAP+Additions.swift  AppStoreParsedReceiptData.h  AppStoreParsedReceiptData.m  AppStoreReceiptData.h  AppStoreReceiptData.m  AppUpgrade.h  AppUpgrade.m  AppUpgrade.swift  Application.swift  ApplicationParameters.swift  ApplicationSupportFileStore.swift  Authorization+Additions.swift  Authorization.swift  AuthorizationState+Codable.swift  AvailableServerRegions.h  AvailableServerRegions.m  Bindable.swift  BridgingTypes.swift  ClientMetadata.swift  ContainerDB.h  (+150 more)
Psiphon-iOS.playground/: Contents.swift
Psiphon.xcodeproj/: project.pbxproj
PsiphonPlayground/: PsiphonPlayground.h
PsiphonTests/: DelimitedFileTest.m  EmbeddedServerEntriesTest.m  ExtensionContainerFileTest.m  Info.plist  JetsamEventTest.m  JetsamMetricsTest.m  JetsamTrackingTest.m  PsiphonTests-Bridging-Header.h  PsiphonTests.swift  RotatingFileTest.m  RunningBinsTest.m  RunningBucketsTest.m  RunningStatsTest.m  TestUtilTests.swift
PsiphonTunnel.framework/: Info.plist  build-git-commit.txt
PsiphonTunnel.xcframework/: Info.plist
PsiphonUITests/: Info.plist  PsiphonUITests.swift
PsiphonVPN/: ABCPacketTunnelProvider.h  ABCPacketTunnelProvider.m  Authorizations.h  Authorizations.m  AuthorizationsDatabase.h  AuthorizationsDatabase.m  BasePacketTunnelProvider.h  BasePacketTunnelProvider.m  Info.plist  LocalNotification.h  LocalNotification.m  LocalNotificationService.h  LocalNotificationService.m  NEBridge.h  PacketTunnelProvider.h  PacketTunnelProvider.m  PacketTunnelUtils.h  PacketTunnelUtils.m  Psiphon-Bridging-Header.h  PsiphonVPN.entitlements  SessionConfigValues.h  SessionConfigValues.m  TunnelFileDescriptor.h  TunnelFileDescriptor.m  VPNStrings.h  VPNStrings.m  psiphon_config.stub
Shared/: Annotations.h  AppFiles.h  AppFiles.m  AppInfo.h  AppInfo.m  Asserts.h  Authorization.h  Authorization.m  AuthorizationToken.h  AuthorizationToken.m  AuthorizationsDatabase.h  DispatchUtils.h  DispatchUtils.m  ExtensionContainerFile.h  ExtensionContainerFile.m  FileUtils.h  FileUtils.m  Logging.h  Logging.m  NSDate+Comparator.h  NSDateFormatter+RFC3339.h  NSDateFormatter+RFC3339.m  Notice.h  Notice.m  NoticeLogger.h  NoticeLogger.m  NotificationCenter.h  Notifier.h  Notifier.m  Notifier.swift  PNEApplicationParameters.h  PNEApplicationParameters.m  ProviderMessageKeys.h  PsiFeedbackLogger.h  PsiFeedbackLogger.m  PsiphonConfigFiles.h  PsiphonConfigFiles.m  PsiphonConfigReader.h  PsiphonConfigReader.m  PsiphonConfigUserDefaults.h  (+17 more)
(+991 files in other folders)
